# EyeTrackingV2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: resources.qrc
src/: Config.cpp  Config.hpp  Constants.hpp  Exceptions.cpp  Exceptions.hpp  main.cpp
src/config/: BubbleView.cpp  BubbleView.hpp  CodeCharts.cpp  CodeCharts.hpp  DataClient.cpp  DataClient.hpp  Database.cpp  Database.hpp  Exceptions.hpp  EyeTracking.cpp  EyeTracking.hpp  General.cpp  General.hpp  Helpers.hpp  ZoomMaps.cpp  ZoomMaps.hpp
src/ui/: MainMenuPage.cpp  MainMenuPage.hpp  MainMenuPage.ui  MainWindow.cpp  MainWindow.hpp  UserInfoPage.cpp  UserInfoPage.hpp  UserInfoPage.ui  UserInfoWidget.cpp  UserInfoWidget.hpp
src/ui/zoom_maps/: ZoomMapsInfoPage.cpp  ZoomMapsInfoPage.hpp  ZoomMapsPage.cpp  ZoomMapsPage.hpp
test/: ConfigReaderTest.cpp
test/config/: GeneralTest.cpp
